# nautobot-app-clemea24

./: .cookiecutter.json  .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
certs/: client.pem  nautobot.crt  nautobot.key  server.key  server.pem
clemea24/: __init__.py
clemea24/designs/: jobs.py
clemea24/designs/edge_site/: jobs.py
clemea24/designs/initial_data/designs/: 0001_design.yaml.j2
clemea24/jobs/: __init__.py
clemea24/tests/: __init__.py  test_api.py
development/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md
docs/dev/: contributing.md  dev_environment.md
docs/dev/code_reference/: api.md  package.md
